--- a/prop-tree-client/src/app/dashboard/dashboard-home/dashboard-home.component.html
+++ b/prop-tree-client/src/app/dashboard/dashboard-home/dashboard-home.component.html
@@ -6,13 +6,13 @@
 
   <div fxFlex="90" fxLayout="row" fxLayoutAlign="space-between stretch" fxLayoutWrap fxFlexFill>
     <div fxFlex="30">
-      <mat-form-field>
+      <mat-form-field class="tag-input">
         <input matInput placeholder="File Filter" [(ngModel)]="fileFilter">
       </mat-form-field>
     </div>
 
     <div fxFlex="30">
-      <mat-form-field>
+      <mat-form-field class="tag-input">
         <mat-select placeholder="New Tag" [(ngModel)]="newTag" (change)="getFiles()">
           <mat-option *ngFor="let tag of tags" [value]="tag">
             {{tag}}
@@ -22,7 +22,7 @@
     </div>
 
     <div fxFlex="30">
-      <mat-form-field>
+      <mat-form-field class="tag-input">
         <mat-select placeholder="Old Tag" [(ngModel)]="oldTag">
           <mat-option *ngFor="let tag of tags" [value]="tag">
             {{tag}}
@@ -31,7 +31,7 @@
       </mat-form-field>
     </div>
 
-    <div fxFlex="10">
+    <div>
       <button [disabled]="!(!loading && selectedFile)" mat-fab color="primary" (click)="export()">
         Export
       </button>
