--- a/prop-tree-client/src/app/app.component.html
+++ b/prop-tree-client/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<div fxLayout="column" class="full-height">
+  <mat-toolbar color="primary" fxFlex="3rem">
+    <span>{{title}}</span>
+  </mat-toolbar>
+
+  <div fxFlex>
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
