--- a/prop-tree-client/src/app/app.component.html
+++ b/prop-tree-client/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div fxLayout="column" class="full-height">
-  <mat-toolbar color="primary" fxFlex="3rem">
+  <mat-toolbar>
+    <img src="assets/PropTreeLogo.png" class="logo">
     <span>{{title}}</span>
   </mat-toolbar>
 
