Perform relative path matching instead of just filename matching.

--- a/prop-tree-client/src/app/app.component.html
+++ b/prop-tree-client/src/app/app.component.html
@@ -1,8 +1,5 @@
 <div fxLayout="column" class="full-height">
-  <mat-toolbar>
-    <img src="assets/PropTreeLogo.png" class="logo">
-    <span>{{title}}</span>
-  </mat-toolbar>
+  <ptc-header></ptc-header>
 
   <div fxFlex>
     <router-outlet></router-outlet>
