Add Properties List

--- a/prop-tree-client/src/app/ptc-header/ptc-header.component.html
+++ b/prop-tree-client/src/app/ptc-header/ptc-header.component.html
@@ -3,14 +3,11 @@
     <img src="assets/PropTreeLogo.png" class="logo">
     <span>PropTreeCompare</span>
     <div fxFlex="1 1 auto"></div>
-    <button mat-flat-button class="full-height"  color="primary">
-      Dashboard
+    <button mat-flat-button class="full-height"  color="primary" routerLink="/">
+      Properties Compare
     </button>
-    <button mat-flat-button class="full-height" color="primary">
-      Tree Compare
-    </button>
-    <button mat-flat-button class="full-height" color="primary">
-      File Compare
+    <button mat-flat-button class="full-height" color="primary" routerLink="/properties">
+      Properties List
     </button>
   </mat-toolbar-row>
 </mat-toolbar>
