--- a/prop-tree-client/src/app/dashboard/dashboard-home/dashboard-home.component.html
+++ b/prop-tree-client/src/app/dashboard/dashboard-home/dashboard-home.component.html
@@ -8,7 +8,7 @@
 
     <div fxFlex="1 1 30%">
       <mat-form-field class="tag-input">
-        <mat-select placeholder="New Tag" [(ngModel)]="newTag" (change)="getFiles()" id="newTagSelect">
+        <mat-select placeholder="New Tag" [(ngModel)]="newTag" (change)="getFiles" id="newTagSelect">
           <mat-option *ngFor="let tag of tags" [value]="tag">
             {{tag}}
           </mat-option>
@@ -33,20 +33,9 @@
     </div>
   </div>
   <div fxFlex fxLayoutAlign="stretch">
-    <mat-card fxFlex="30" class="scrolling">
-      <div *ngIf="fileLoading">
-        <mat-spinner class="loading-spinner"></mat-spinner>
-      </div>
-      <div *ngIf="!fileLoading">
-        <ul>
-          <li *ngFor="let file of filteredFiles()">
-            <button mat-raised-button [disabled]="file == selectedFile" (click)="select(file)" class="file-button">
-              {{file.fileName}}
-            </button>
-          </li>
-        </ul>
-      </div>
 
+    <mat-card fxFlex="30" class="scrolling">
+      <app-dashboard-file-list [fileFilter]="fileFilter" [tag]="newTag" (fileSelected)="select($event)"></app-dashboard-file-list>
     </mat-card>
 
     <mat-card class="scrolling" fxFlex="70">
