--- a/prop-tree-client/src/styles.scss
+++ b/prop-tree-client/src/styles.scss
@@ -1,3 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+div .scrolling {
+  overflow-y: auto;
+}
+
+.full-size {
+  width: 100%;
+  height: 100%;
+}
