adding prop-to-json component shell

--- a/prop-tree-client/src/app/ptc-header/ptc-header.component.html
+++ b/prop-tree-client/src/app/ptc-header/ptc-header.component.html
@@ -9,5 +9,8 @@
     <button mat-flat-button class="full-height" color="primary" routerLink="/properties">
       Properties List
     </button>
+    <button mat-flat-button class="full-height" color="primary" routerLink="/prop-to-json">
+      Properties => JSON
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
