--- a/prop-tree-client/src/app/dashboard/prop-to-json/prop-to-json.component.html
+++ b/prop-tree-client/src/app/dashboard/prop-to-json/prop-to-json.component.html
@@ -12,7 +12,7 @@
       <textarea fxFlex="100%" [(ngModel)]="propsString" (change)="processProps()"></textarea>
     </mat-card>
     <mat-card fxFlex="1 1 50%" class="scrolling">
-      <textarea fxFlex="100%" [(ngModel)]="jsonString"></textarea>
+      <textarea fxFlex="100%" [(ngModel)]="jsonString" (change)="processJSON()"></textarea>
     </mat-card>
   </div>
 </div>
